syntax = "proto3";
package DomainServices.ProductService;
option csharp_namespace = "DomainServices.ProductService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDecimal.proto";
import "NullableGrpcDate.proto";
import "Messages/Types.proto";

message MortgageData {
	int64 PartnerId = 1;
	string ContractNumber = 2;
	cis.types.NullableGrpcDecimal LoanAmount = 3;
	cis.types.NullableGrpcDecimal LoanInterestRate = 4;
	google.protobuf.Int32Value FixedRatePeriod = 5;
	int32 ProductTypeId = 6;
	cis.types.NullableGrpcDecimal LoanPaymentAmount = 7;
	cis.types.NullableGrpcDecimal CurrentAmount = 8;
	cis.types.NullableGrpcDate DrawingDateTo = 9;
	repeated Relationship Relationships = 10;
	cis.types.NullableGrpcDate ContractSignedDate = 11;
	cis.types.NullableGrpcDate FixedRateValidTo = 12;
	cis.types.NullableGrpcDecimal AvailableForDrawing = 13;
	cis.types.NullableGrpcDecimal Principal = 14;
	google.protobuf.Int32Value LoanKindId = 15;
	PaymentAccount PaymentAccount = 16;
	cis.types.NullableGrpcDecimal CurrentOverdueAmount = 17;
	cis.types.NullableGrpcDecimal AllOverdueFees = 18;
	google.protobuf.Int32Value OverdueDaysNumber = 19;
	repeated LoanPurpose LoanPurposes = 20;
	cis.types.NullableGrpcDate ExpectedDateOfDrawing = 21;
	cis.types.NullableGrpcDecimal InterestInArrears = 22;
	cis.types.NullableGrpcDate LoanDueDate = 23;
	google.protobuf.Int32Value PaymentDay = 24;
	google.protobuf.Int64Value BranchConsultantId = 28;
	google.protobuf.Int64Value CaseOwnerUserCurrentId = 29;
	google.protobuf.Int64Value CaseOwnerUserOrigId = 30;
	cis.types.NullableGrpcDate FirstAnnuityPaymentDate = 31;
	PaymentAccount RepaymentAccount = 32;
	repeated LoanRealEstate LoanRealEstates = 33;
	StatementObject Statement = 34;
	google.protobuf.StringValue PcpId = 35;
	cis.types.NullableGrpcDate FirstSignatureDate = 36;
	bool IsCancelled = 37;
	cis.types.NullableGrpcDate DrawingFinishedDate = 38;
	google.protobuf.Int32Value MortgageState = 39;
	RetentionData Retention = 40;
	RefixationData Refixation = 41;
	
	message RetentionData {
		cis.types.NullableGrpcDecimal LoanInterestRate = 1;
		cis.types.NullableGrpcDecimal LoanPaymentAmount = 2;
		cis.types.NullableGrpcDate LoanInterestRateValidFrom = 3;
		cis.types.NullableGrpcDate LoanInterestRateValidTo = 4;
	}

	message RefixationData {
		cis.types.NullableGrpcDecimal LoanInterestRate = 1;
		cis.types.NullableGrpcDecimal LoanPaymentAmount = 2;
		cis.types.NullableGrpcDate LoanInterestRateValidTo = 3;
		google.protobuf.Int32Value FixedRatePeriod = 4;
	}
}